<resources>
    <string name="app_name">Hazi</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task name…</string>
    <string name="task_description">Task description… (optional)</string>
    <string name="task_difficulty">Task difficulty</string>
    <string name="delete_task">Delete Task</string>
    <string name="save_task">Save Task</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_email">Enter email…</string>
    <string name="enter_password">Enter password…</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_textview">Already have an account? Tap to log in</string>
    <string name="confirm_password">Confirm password…</string>
    <string name="tap_to_sign_up">Tap to sign up</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="edit_task">Edit Task</string>
    <string name="tasks">Tasks</string>
    <string name="dialog_delete_task_confirmation">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="task_priority">Task priority</string>
    <string name="due_date">Due date</string>
    <string name="date">Date</string>
    <string name="shop_item_image">Shop item image</string>
    <string name="shop_item_name">Shop item name</string>
    <string name="shop_item_price">Shop item price</string>
    <string name="shop">Shop</string>
    <string name="buy">Buy</string>
    <string name="user_coins">0 Coins</string>
    <string name="feed_pet">Feed Pet</string>
    <string name="hunger">Hunger:</string>
    <string name="energy">Energy:</string>
    <string name="pet">Pet</string>
    <string name="locker">Locker</string>
    <string name="equip">Equip</string>
    <string name="image_of_your_pet">Image of your pet</string>
    <string name="calendar">Calendar</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try again</string>
    <string name="no_connection">No internet connection</string>
    <string name="check_connection">Please check your internet connection and try again</string>
    <string name="energy_full_title">Your pet energy is full</string>
    <string name="energy_full_content">Let\'s get back to work!</string>
    <string name="pet_channel_description_text">Updates of the pet\'s condition</string>
    <string name="hunger_full_title">Your pet is hungry</string>
    <string name="hunger_full_content">You better feed it!</string>
    <string name="tasks_notification_title">You have some tasks that are about to become past due</string>
    <string name="tasks_notification_content">Drag down to see the full list</string>
    <string name="task_channel_description_text">Tasks notifications</string>
    <string name="unequip">Unequip</string>
    <string name="request_notification_permission_dialog_message">Please allow our app to send you notifications about your pet\'s condition.
                                                                Otherwise it will be hard for you to keep track of it.</string>
</resources>