<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.android.application.hazi.fragments.TasksFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_tasks">
        <action
            android:id="@+id/action_tasksFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_editTaskFragment"
            app:destination="@id/editTaskFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_calendarFragment"
            app:destination="@id/calendarFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.android.application.hazi.fragments.AddTaskFragment"
        android:label="@string/add_task"
        tools:layout="@layout/fragment_add_task" />
    <fragment
        android:id="@+id/editTaskFragment"
        android:name="com.android.application.hazi.fragments.EditTaskFragment"
        android:label="@string/edit_task"
        tools:layout="@layout/fragment_edit_task" >
        <argument
            android:name="taskName"
            app:argType="string" />
        <argument
            android:name="taskDescription"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="taskDifficulty"
            app:argType="integer" />
        <argument
            android:name="taskPriority"
            app:argType="integer" />
        <argument
            android:name="taskDate"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="taskPosition"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.android.application.hazi.fragments.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" >
        <action
            android:id="@+id/action_calendarFragment_to_editTaskFragment"
            app:destination="@id/editTaskFragment" />
    </fragment>
</navigation>