<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground">

        <CheckBox
            android:id="@+id/taskCompletedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/taskNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/task_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taskDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:maxLines="3"
                android:text="@string/task_description"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/taskDifficultyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_difficulty"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>